--- a/water.css
+++ b/water.css
@@ -1,3 +1,56 @@
 html {
-background-image: url('river.gif');
+background-image: url('waterfall.gif');
+background-size: cover;
 }
+
+h1 {
+text-align: center;
+color: white;
+text-shadow: 5px;    
+}
+
+
+
+
+
+
+
+/* GLOBAL STYLES */
+/* body {
+    padding-top: 5em;
+    display: flex;
+    justify-content: center;
+  } */
+  
+  /* DEMO-SPECIFIC STYLES */
+  .typewriter h1 {
+
+    padding-top: 5em;
+    display: flex;
+    justify-content: center;
+
+    color: #fff;
+    text-align: center;
+    font-size: 40 pixels;
+    font-family: monospace;
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    border-right: .15em solid rgb(128, 113, 195); /* The typwriter cursor */
+    white-space: nowrap; Keeps the content on a single line
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    letter-spacing: .15em; /* Adjust as needed */
+    animation: 
+      typing 3.5s steps(30, end),
+      blink-caret .5s step-end infinite;
+  }
+  
+  /* The typing effect */
+  @keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+  }
+  
+  /* The typewriter cursor effect */
+  @keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: rgba(255, 166, 0, 0) }
+  }
