--- a/water.css
+++ b/water.css
@@ -9,14 +9,11 @@ color: white;
 }
  
 
-<<<<<<< Updated upstream
 /* GLOBAL STYLES */
-=======
 
 
 
 /* Animation for the text (Did not code) */
->>>>>>> Stashed changes
 /* body {
     padding-top: 5em;
     display: flex;
@@ -36,7 +33,7 @@ color: white;
     font-family: monospace;
     overflow: hidden; /* Ensures the content is not revealed until the animation */
     border-right: .15em solid rgb(128, 113, 195); /* The typwriter cursor */
-    white-space: nowrap; Keeps the content on a single line
+    white-space: nowrap; /*Keeps the content on a single line*/
     margin: 0 auto; /* Gives that scrolling effect as the typing happens */
     letter-spacing: .15em; /* Adjust as needed */
     animation: 
